--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,3 +1,23 @@
 spring:
-  application:
-    name: item
+  datasource:
+    url: jdbc:mysql://localhost:3306/paranmanzangdb  # MySQL ???? ??, ?????? ??
+    username: root  # MySQL ??? ??
+    password: 1234 # MySQL ????
+    driver-class-name: com.mysql.cj.jdbc.Driver  # MySQL JDBC ???? ???
+    # (?? ??) MySQL ?????? ?? ? ??
+    hikari:
+      maximum-pool-size: 10  # ?? ??? ? ???
+      minimum-idle: 5  # ?? ?? ??? ?
+      idle-timeout: 30000  # ?? ???? ?? ?? ?? (???)
+      connection-timeout: 30000  # ??? ???? ?? (???)
+      max-lifetime: 1800000  # ???? ?? ?? ?? (???)
+  jpa:
+    hibernate:
+      ddl-auto: update  # Hibernate? DDL ?? ?? ?? (create, update, validate ?)
+    show-sql: true  # SQL ?? ?? ??
+    properties:
+      hibernate:
+        dialect: org.hibernate.dialect.MySQLDialect
+  sql:
+    init:
+      mode: always  # ?????? ?? ? SQL ???? ?? ?? (always, never ?)
